syntax = "proto3";

package greet;

option go_package= "greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting request = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimeRequest {
    Greeting greeting = 1;
}

message GreetManyTimeResponse {
    string result = 1;
}

service GreetService {
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    // Server Streaming rpc
    rpc GreetManyTimes(GreetManyTimeRequest) returns (stream GreetManyTimeResponse) {};
}
